syntax = "proto2";

option java_multiple_files = true;

package ClientServerCommunication;


message CreateAccountReq {
}
message CreateAccountRsp {
    required bool    success = 1;
    required uint32  id      = 2;
}


message DeleteAccountReq {
    required uint32 accountId = 2;
}
message DeleteAccountRsp {
}


message AddAmountReq {
    required uint32 accountId = 2;
    required uint32 amount    = 3;
}
message AddAmountRsp {
    required bool success = 1;
}


message GetAmountReq {
    required uint32 accountId = 2;
}
message GetAmountRsp {
    required bool    success = 1;
    required uint32  amount  = 3;
}


message TransferReq {
    required uint32 fromId   = 1;
    required uint32 toId     = 2;
    required uint32 amount   = 3;
}
message TransferRsp {
    required bool success = 1;
}


service Client {
    // Can be splitted into "banker" and "ATM" services
    rpc createAccount (CreateAccountReq) returns (CreateAccountRsp) {}
    rpc deleteAccount (DeleteAccountReq) returns (DeleteAccountRsp) {}
    rpc addAmount     (AddAmountReq    ) returns (AddAmountRsp    ) {}
    rpc getAmount     (GetAmountReq    ) returns (GetAmountRsp    ) {}
    rpc transfer      (TransferReq     ) returns (TransferRsp     ) {}
}

