syntax = "proto2";

option java_multiple_files = true;

package ServerCommunication;

import "client_server_comm.proto";

message Tx {
    oneof txType {
        ClientServerCommunication.CreateAccountReq  create      = 1;
        ClientServerCommunication.DeleteAccountReq  delete      = 2;
        ClientServerCommunication.AddAmountReq      addAmount   = 3;
        ClientServerCommunication.GetAmountReq      getAmount   = 4;
        ClientServerCommunication.TransferReq       transfer    = 5;
    }
}

message BlockId {
    required uint32 serverId     = 1;
    required uint32 serialNumber = 2;
}

message BlockMsg {
    repeated Tx         txs = 1;
    required BlockId    id  = 2;
}


message PushBlockReq {
    required BlockMsg block = 1;
}

message PushBlockRsp {
    required bool success = 1;
}


message PullBlockReq {
    required BlockId id = 1;
}

message PullBlockRsp {
    required bool       success = 1;
    required BlockMsg   block   = 2;
}


service Server {
    rpc pushBlock (PushBlockReq ) returns (PushBlockRsp) {}
    rpc pullBlock (PullBlockReq ) returns (PullBlockRsp) {}
}

